replaced food text to dishes text

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="header_wrapper">
           <a href="#" class="header_logo">
             <i class="fa-solid fa-utensils"></i>
-            <h2 class="header_title">Food</h2>
+            <h2 class="header_title">Dishes</h2>
           </a>
           <nav class="header_navbar">
             <a href="#" class="header_link">Home</a>
